# fast-batteries

./: README.md  docker-compose.remote.yml
.devcontainer/: devcontainer.json  docker-compose.local.yml  docker-compose.yml
.devcontainer/srv-back/: devcontainer.json
.devcontainer/srv-front/: devcontainer.json
.github/workflows/: ci.yml
back/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
back/app/: confcelery.py  conftest.py  main.py
back/app/commands/: create_badge.py  create_superuser.py  reset_db.py  shell.py
back/app/core/: auth.py  config.py  database.py  emails.py  exceptions.py  logging.py  query_ordering.py  query_pagination.py  query_searching.py  scheduling.py  security.py
back/app/email_templates/src/: reset_password.mjml
back/app/email_templates/src/partials/: button_primary.mjml  button_secondary.mjml  section_footer.mjml  section_header.mjml  text_hello.mjml  text_support.mjml
back/app/factories/: badge.py  base.py  user.py
back/app/models/: badge.py  base.py  db_parameters.py  periodic_task.py  user.py
back/app/routes/: auth.py  badges.py  debug.py  root.py  social_auth.py  users.py  websockets.py
back/app/schemas/: badge.py  base.py  chat.py  message.py  periodic_task.py  token.py  user.py
back/app/tasks/: tasks.py
back/app/tests/core/: test_auth.py  test_scheduling.py  test_security.py
back/app/tests/core/test_exceptions/: test_project_and_uncaught.py  test_pydantic.py
back/app/tests/core/test_query/: test_ordering.py  test_pagination.py  test_searching.py
back/app/tests/models/: test_base.py  test_periodic_task.py  test_user.py
back/app/tests/routes/: test_badges.py  test_users.py  test_websockets.py
back/app/tests/schemas/: test_schemas_base.py  test_schemas_token.py  test_schemas_user.py
back/app/tests/utils/: test_fields.py  test_filesystem.py  test_orm.py  test_strings.py  test_timezone.py  test_validation.py
back/app/tests/websockets/: test_chat_handler.py  test_connection.py  test_redis_subscriber.py
back/app/utils/: cli.py  fields.py  filesystem.py  introspection.py  orm.py  strings.py  testing.py  timezone.py  validation.py
back/app/websockets/: connection.py  managers.py  redis_subscriber.py
back/app/websockets/handlers/: chat.py
back/app/websockets/schemas/: base.py  chat.py  redis.py
back/migrations/: env.py
back/migrations/versions/: 36d891fb1a72_initial.py  692d47be18b9_initial.py  ac6b8f436272_initial.py
back/public/: test.css
doc/: XX_ORM.md  XX_architecture.md  XX_authentication.md  XX_deployment.md  XX_developer_experience.md  XX_local_install.md  XX_messaging_and_errors.md  XX_settings.md  XX_testing.md  XX_websockets.md
doc/diagrams/: authentication.d2
front/: .dockerignore  .prettierrc  Dockerfile  app.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
front-next/: app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json
front-next/assets/css/: main.css
front-next/components/: Common.vue  ThemeSelector.vue
front-next/components/auth/: SocialButtons.vue
front-next/components/button/: Back.vue  ConfirmableDelete.vue  Submit.vue
front-next/layouts/: default.vue  solo.vue
front-next/pages/: index.vue
front-next/types/: global.d.ts  schemas.d.ts
front-next/utils/: authService.ts  toasts.ts
front/assets/css/: main.css  (+1 more)
front/components/: Common.vue  DatePicker.vue  Footer.vue  Header.vue  ThemeSelector.vue
front/layouts/: solo.vue
front/pages/: health-check.vue  index.vue  upload.vue  websocket.vue
front/plugins/: rehydrateUserProfile.ts
front/types/: global.d.ts  schemas.d.ts
front/utils/: dates.ts  fetch.ts  toasts.ts
(+65 files in other folders)
